# cal3d

android/: README.md
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  main.cpp
android/app/src/main/res/values/: strings.xml
android/ndk_helper/: JNIHelper.cpp
examples/cally/: raw_viewer.py
examples/cally/src/: demo.cpp  demo.h  global.h  menu.cpp  model.cpp  tick.cpp
src/cal3d/: CMakeLists.txt  loader.cpp
